fix: project card categories overflow

--- a/src/components/Ecosystem/Projects/styles.module.css
+++ b/src/components/Ecosystem/Projects/styles.module.css
@@ -20,16 +20,8 @@
   height: 300px;
 }
 
-.card:hover {
+.outline:hover {
   box-shadow: inset 0 0 0 1px var(--mui-palette-primary-main);
-}
-
-.cardLink {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .image {
@@ -56,12 +48,19 @@
   gap: 8px;
   flex-wrap: wrap;
   margin-top: 16px;
+  overflow-y: auto;
+  scrollbar-width: none; /* Firefox */
+}
+
+.categories::-webkit-scrollbar {
+  display: none;
 }
 
 .chip {
   border-radius: 4px;
   height: 23px;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .reset {
@@ -128,6 +127,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  flex-shrink: 0;
 }
 
 .filterButton {
